--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Altas' History</title>
+    <title>Purchases History</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Altas' History</h1>
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Type</th>
-                    <th>Card</th>
-                    <th>Quantity</th>
-                    <th>Price USD</th>
-                    <th>Price DEC</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in rows %}
-                <tr>
-                    <td>{{ row.date }}</td>
-                    <td>{{ row.type }}</td>
-                    <td>{{ row.card }}</td>
-                    <td>{{ row.quantity }}</td>
-                    <td>{{ row.price_usd }}</td>
-                    <td>{{ row.price_dec }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <h1>Purchases History</h1>
+        <form class="form-inline" method="POST">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+            </div>
+            <div class="form-group">
+                <label for="days">Days:</label>
+                <input type="text" class="form-control" id="days" name="days" placeholder="Enter number of days">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
     </div>
 </body>
 </html>
